mobile fixed image alignment

--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@
    --very-dark-desaturated-blue: hsl(238, 29%, 16%);
    --soft-red: hsl(14, 88%, 65%);
    --gray: #4b4c5f;
+   --dark-blue: #1e1f36;
 }
 
 * {
@@ -43,22 +44,20 @@ body {
    box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.24);
    min-height: 30rem;
    padding-top: 5rem;
+   max-width: 1280px;
 }
 
 .images-mobile {
-   position: absolute;
-   z-index: 3;
-   top: -110px;
+   background: url('images/bg-pattern-mobile.svg') right bottom no-repeat;
+   margin-top: -12rem;
+}
+
+.images-mobile img {
+   margin-left: -1rem;
 }
 
 .images-desktop {
    display: none;
-}
-
-.img-mobile-bg {
-   position: absolute;
-   bottom: -5%;
-   left: 10%;
 }
 
 .text {
@@ -93,8 +92,7 @@ body {
 }
 
 .question img {
-   width: 1rem;
-   transform: rotate(90deg);
+   width: 0.9rem;
    transition: all 0.5s ease-in;
 }
 
@@ -104,6 +102,7 @@ body {
 }
 
 .answer {
+   color: var(--dark-grayish-blue);
    transition: all 0.5s ease-in;
    display: none;
 }
@@ -114,10 +113,11 @@ body {
 
 .show .question h4 {
    font-weight: bold;
+   color: var(--dark-blue);
 }
 
 .show img {
-   transform: rotate(270deg);
+   transform: rotate(180deg);
 }
 
 hr {
@@ -166,7 +166,7 @@ hr {
       min-width: 472px;
       background-image: url('images/illustration-woman-online-desktop.svg'),
          url('images/bg-pattern-desktop.svg');
-      background-size: 120%, 150%;
+      background-size: 120%, 200%;
       background-position: right center;
       background-repeat: no-repeat;
       position: relative;
@@ -180,6 +180,7 @@ hr {
 
    .text {
       width: 50%;
+      padding-right: 2rem;
    }
 
    .title {
